--- a/app/src/main/res/layout/activity_source.xml
+++ b/app/src/main/res/layout/activity_source.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".view.SourceActivity">
 
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSource"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
