--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -13,7 +13,8 @@
             android:src="@drawable/ic_launcher_background"
             android:id="@+id/categoryImage"
             android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="200dp"
+            android:contentDescription="TODO" />
         <TextView
             android:id="@+id/categoryName"
             android:text="@string/busines"
